--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,6 +30,7 @@ set-option -g status-position top
 set -g focus-events "on"
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'catppuccin/tmux#v2.1.2'
+set -g @plugin 'christoomey/vim-tmux-navigator'
 
 set -g @catppuccin_window_current_text "#{window_name}"
 set -g @catppuccin_window_text "#{window_name}"
