Add lazygit keybinding

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,16 +13,16 @@ bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
 
+bind-key g new-window -c "#{pane_current_path}" -n lazygit lazygit
+
 # Making sure that new pane open in same directory as parent pane:
 # bind-key '"' split-window -v -c "#{pane_current_path}"
 bind-key "%" split-window -h -c "#{pane_current_path}"
 bind-key '"' split-window -v -c "#{pane_current_path}" \; run-shell "$(dirname $(readlink -f ~/.tmux.conf))/adjust-pane-height.sh #{session_name} #{window_index} #{pane_id}"
 
-
 # Hooks updating window names after creating new window or breaking panes to windows opened directory
 set-hook -g after-new-window "run-shell '$(dirname $(readlink -f ~/.tmux.conf))/update-window-name.sh #{session_name} #{window_index}'"
-set-hook -g pane-focus-out "run-shell '$(dirname $(readlink -f ~/.tmux.conf))/update-window-name.sh #{session_name} #{window_index}'"
-
+set-hook -g pane-focus-out "run-shell '$(dirname $(readlink -f ~/.tmux.conf))/update-window-name.sh #{session_name}'"
 
 set-option -g status-position top
 
