Bugfix: update window renaming hook -- window_index variable was missing

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -33,7 +33,7 @@ bind-key '"' split-window -v -c "#{pane_current_path}" \; run-shell "$(dirname $
 
 # Hooks updating window names after creating new window or breaking panes to windows opened directory
 set-hook -g after-new-window "run-shell '$(dirname $(readlink -f ~/.tmux.conf))/update-window-name.sh #{session_name} #{window_index}'"
-set-hook -g pane-focus-out "run-shell '$(dirname $(readlink -f ~/.tmux.conf))/update-window-name.sh #{session_name}'"
+set-hook -g pane-focus-out "run-shell '$(dirname $(readlink -f ~/.tmux.conf))/update-window-name.sh #{session_name} #{window_index}'"
 
 set-option -g status-position top
 
