Setup vim keybindings, when in tmux selection mode

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,6 +8,17 @@ set-option -g prefix C-a
 #Do i need this? -- By default, Control + a is used for moving to the start of the line in shell environments. To avoid conflicts, you may want to send the original Control + a behavior to the underlying shell using this line:
 #bind C-a send-prefix
 
+# Enable vi mode in copy-mode
+setw -g mode-keys vi
+
+# Use 'v' to begin selection (like in Vim)
+bind-key -T copy-mode-vi v send -X begin-selection
+
+# Use 'y' to copy selected text (like Vim "yank")
+bind-key -T copy-mode-vi y send -X copy-selection
+
+# Use 'p' to paste last copied buffer (in normal mode)
+
 bind-key h select-pane -L
 bind-key j select-pane -D
 bind-key k select-pane -U
