--- a/.tmux.conf
+++ b/.tmux.conf
@@ -40,17 +40,17 @@ set-option -g status-position top
 # List of plugins
 set -g focus-events "on"
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'catppuccin/tmux#v2.1.2'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
-set -g @catppuccin_window_current_text "#{window_name}"
-set -g @catppuccin_window_text "#{window_name}"
-set -g status-left ""
-set -g status-right ""
-#set -g status-left "#{E:@catppuccin_status_application}"
-# set -g status-right "#{E:@catppuccin_status_directory}"
-set -ag status-right "#{E:@catppuccin_status_session}"
-set -ag status-right "#{E:@catppuccin_status_uptime}"
+set -g window-status-format " #{window_index}:#{window_name} "
+set -g window-status-current-format "*#{window_index}:#{window_name}*"
+set -g status-bg black
+set -g status-fg white
+# =/10
+# Use #{=-5:session_name} to get the last 5 letters. The negative sign makes it count from the end.
+set -g status-left "[#{=/3:session_name}..#{=-3:session_name}]"
+set -g status-right "%d-%m-%Y - %H:%M"
+# set -g status-left ""
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
